--- a/welcome.html
+++ b/welcome.html
@@ -20,7 +20,7 @@
         <div class="button-container">
             <a href="services.html">Explore</a>
         
-            <button onclick="location.href='index.html'">log out</button>
+            <button onclick="location.href='index.html'">Back</button>
             
         </div>
     </div>
