--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Welcome to Blissful Beauty Salon</h1>
+        <h1>Blissful Beauty Salon</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Log out</a></li>
@@ -51,8 +51,9 @@
     </section>
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Phone: +1(800)023-3125</p>
-        <p>Email: info@blissprice.com</p>
+        <p>Phone: +1(800)023-3123</p>
+        <p>Email: info@blissprice.com / thekomphow99@gmail.com</p>
+
         <p>Address: 60 Terminus Street, East London</p>
         </section>
 </body>
