--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -13,7 +13,7 @@
 </section>
     
     
-    <img class="x" src="megazine/New folder/11.png" alt="image9" >
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="image9" >
  
     <img class="x" src="picture/WhatsApp Image 2024-07-13 at 8.33.40 PM.jpeg" alt="image">
  
