--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -13,14 +13,12 @@
 </section>
     
     
-    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="image9" >
- 
-    <img class="x" src="picture/WhatsApp Image 2024-07-13 at 8.33.40 PM.jpeg" alt="image">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/11.png" alt="image">
  
     <img class="x" src="picture/Manicure & Pedicure.png"alt="image2">
  
  
-    <img class="x" src="picture/suliey bar4.jpeg" alt="image18">
+   <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="image9" > 
  
     <img class="x" src="picture/s.jpeg" alt="image19">
  
