--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -15,7 +15,7 @@
     
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/11.png" alt="image">
  
-    <img class="x" src="picture/Manicure & Pedicure.png"alt="image2">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Manicure%20%26%20Pedicure.png"alt="image2">
  
  
    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="image9" > 
