--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -20,7 +20,7 @@
  
    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="image9" > 
  
-    <img class="x" src="picture/s.jpeg" alt="image19">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/s.jpeg" alt="image19">
  
   <img class="x" src="picture/suliey bar.jpeg" alt="image20">
 
