--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -22,7 +22,7 @@
  
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/s.jpeg" alt="image19">
  
-  <img class="x" src="picture/suliey bar.jpeg" alt="image20">
+  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar.jpeg" alt="image20">
 
   <img class="x" src="megazine/New folder/8.png" alt="image8">
  
