--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -14,6 +14,8 @@
     
     
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/11.png" alt="image">
+
+    <img class = "x" src ="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/WhatsApp%20Image%202024-07-13%20at%208.33.40%20PM.jpeg" alt = "image">
  
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Manicure%20%26%20Pedicure.png"alt="image2">
  
