--- a/services.html
+++ b/services.html
@@ -28,13 +28,13 @@
         <p><strong>Welcome to Blissful Beauty Salon!</strong>
         <br>
         <br>
-        We're so delighted to have you here. Our team is ready to pamper you with the finest beauty treatments that will leave
-        you feeling refreshed and radiant. Take a moment to explore our range of luxurious services designed just for you. We
+        Our team is ready to pamper you with the finest beauty treatments that will leave
+        you feeling refreshed and radiant. <br> Take a moment to explore our range of luxurious services designed just for you. We
         can't wait to help you look and feel your absolute best! 
         <br>
-        <br>
+        
 
-         Please click button below to view and soak up our current Services...
+         Please click button below to view and soak up our current Services
         </p>
         <a href="servicesoffred.html"><button class="Our-Services">See Our Services</button></a>
     </section>
