--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -26,9 +26,9 @@
  
   <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar.jpeg" alt="image20">
 
-  <img class="x" src="megazine/New folder/8.png" alt="image8">
+  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/8.png" alt="image8">
  
-  <img class="x" src="megazine/New folder/12.png" alt="image12">
+  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/12.png" alt="image12">
 
   <img class="x" src="picture/Black Modern Fauget Salon Skin care routine .png" alt = "image22"
 
