--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -30,7 +30,7 @@
  
   <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/12.png" alt="image12">
 
-  <img class="x" src="picture/Black Modern Fauget Salon Skin care routine .png" alt = "image22"
+  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Black%20Modern%20Fauget%20Salon%20Skin%20care%20routine%20.png" alt = "image22"
 
   <img class="x" src="megazine/New folder/5.png" alt="image5">
 
