--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -32,11 +32,11 @@
 
   <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Black%20Modern%20Fauget%20Salon%20Skin%20care%20routine%20.png" alt = "image22"
 
-  <img class="x" src="megazine/New folder/5.png" alt="image5">
+  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/5.png" alt="image5">
 
-  <img class="x" src="megazine/New folder/9.png" alt="image9">
+  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/9.png" alt="image9">
 
- <img class="x" src="megazine/New folder/10.png" alt="image10">
+ <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/10.png" alt="image10">
     
 
     <img class="x" src="picture/massage  (1).png" alt="image4">
