--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -30,9 +30,10 @@
  
   <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/12.png" alt="image12">
 
-  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Black%20Modern%20Fauget%20Salon%20Skin%20care%20routine%20.png" alt = "image22"
+  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Black%20Modern%20Fauget%20Salon%20Skin%20care%20routine%20.png" alt = "image22">
 
-  <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/5.png" alt="image5">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/5.png" alt="image9">
+
 
   <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/9.png" alt="image9">
 
@@ -47,7 +48,7 @@
 
      <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2.png" alt="image16">
 
-     <img class="x" src="picture/massage 3.png" alt="image15">
+     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/massage%203.png" alt="image15">
      
      <img class="x" src="megazine/New folder/13.png" alt="image17">
 
