--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -50,7 +50,7 @@
 
      <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/massage%203.png" alt="image15">
      
-     <img class="x" src="megazine/New folder/13.png" alt="image17">
+     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/13.png" alt="image17">
 
 
       <button class="back-button" onclick="window.location.href='services.html'">Back</button>
