--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <div class="login-container">
         <h2><strong>Blissful Beauty Salon</strong></h2>
-        <form action="welcome.html" method="post">
+        <form action="welcome.html" method="get">
             <input type="text" name="username" placeholder="Username" aria-label="Username">
             <input type="password" name="password" placeholder="Password" required aria-label="Password">
             <input type="submit" value="Log In">
-            <a href="registration.html">Sign up?</a>
-            <a href="forgotpassword.html">Forgotten password?
+            Don't have account yet?</<a href="registration.html">Sign up?<a>
+            <a href="forgotpassword.html">I forgot my password
             
            
         </form>
