--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <input type="text" name="username" placeholder="Username" aria-label="Username">
             <input type="password" name="password" placeholder="Password" required aria-label="Password">
             <input type="submit" value="Log In">
-            </<a href="registration.html">Sign up?<a>
+            <a href="registration.html">Sign up?</a>
             <a href="forgotpassword.html">I forgot my password
             
            
