--- a/giftcard.html
+++ b/giftcard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Send a Gift Card - Blissful Beauty Salon</title>
     <link rel="stylesheet" href="giftcard.css">
-    <script>giftcard.js</script>
+    
 </head>
 
 <body>
@@ -88,7 +88,7 @@
     
     <button id="back-to-top" title="Go to top">Top</button>
 </html>
-    <!--<script src="gitfcard.js"></script>
+    <script src="gitfcard.js"></script>
 </body>
 
 </html>
