--- a/services.html
+++ b/services.html
@@ -34,11 +34,8 @@
             <br><b></b>Please click button below to view and soak up our current Services</b>
 
         <br>
-        <br>
-        <br>
-
         
-        <a href="servicesoffred.html"><button class="Our-Services">Our Services</button></a>
+        <a href="servicesoffred.html"><button class="Our-Services">See Our Services</button></a>
     </section>
 
     <section id="services">
