--- a/services.html
+++ b/services.html
@@ -28,10 +28,9 @@
         <p><strong>Welcome to Blissful Beauty Salon!</strong>
         <br>
         <br>
-        Our team is ready to pamper you with the finest beauty treatments that will leave
-        you feeling refreshed and radiant.  Take a moment to explore our range of luxurious services designed just for you. 
+       Take a moment to explore our range of luxurious services designed just for you. 
        
-            <br><b></b>Please click button below to view and soak up our current Services</b>
+            <br><b>Please click button below to view and soak up our current Services</b>
 
         <br>
         
