--- a/services.html
+++ b/services.html
@@ -26,11 +26,9 @@
     <section id="welcome">
         <h2>First Time Here?</h2>
         <p><strong>Welcome to Blissful Beauty Salon!</strong>
-        <br>
-        <br>
        Take a moment to explore our range of luxurious services designed just for you. 
        
-            <br><b>Please click button below to view and soak up our current Services</b>
+            <br><i>Please click button below to view and soak up our current Services</i>
 
         <br>
         
