--- a/calendar.html
+++ b/calendar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appointment Calendar - Blissful Beauty Salon</title>
     <link rel="stylesheet" href="calender.css">
 </head>
@@ -9,7 +10,7 @@
         <h1>Appointment Calendar</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Log out</a></li>
+                <li><a href="index.html">Sign out</a></li>
                 <li><a href="servicesoffred.html">Services</a></li>
                 <li><a href="giftcard.html">Gift Card</a></li>
                 <li><a href="contactUs.html">Contact</a></li>
