--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissful Beauty Salon</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
 
     <div class="login-container">
         <h2><strong>Blissful Beauty Salon</strong></h2>
-        <form action="welcome.html" method="get">
+        <form action="welcome.html" method="post">
             <input type="text" name="username" placeholder="Username" aria-label="Username">
             <input type="password" name="password" placeholder="Password" required aria-label="Password">
-            <input type="submit" value="Log In">
+            <input type="submit" value="Sign in">
             <a href="registration.html">Sign up?</a>
-            <a href="forgotpassword.html">I forgot my password
+            <a href="forgotpassword.html">Forgotten password?
             
            
         </form>
