--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div class="login-container">
         <h2><strong>Blissful Beauty Salon</strong></h2>
-        <form action="welcome.html" method="post">
+        <form action="welcome.html" method="get">
             <input type="text" name="username" placeholder="Username" aria-label="Username">
             <input type="password" name="password" placeholder="Password" required aria-label="Password">
             <input type="submit" value="Sign in">
