--- a/registration.html
+++ b/registration.html
@@ -12,7 +12,7 @@
     <div class="registration-container">
         <h2>Create an Account</h2>
         <form id="registration-form" action="index.html" method="post">
-            <input type="text" name="first_name" placeholder=" Please Enter full Names" required>
+            <input type="text" name="first_name" placeholder=" Please Enter Your Full Names" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="tel" name="phone" placeholder="Phone Number" required>
             <input type="date" name="dob" placeholder="Date of Birth" required>
