--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissful Beauty Salon</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="index.css">
     
     <!--Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-    <script type="module" src="/scripts/index.js" defer></script>
+    <script type="module" src="index.js" defer></script>
 </head>
 
 <body>
