--- a/Dashboard.html
+++ b/Dashboard.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Blissful Salon</title>
-    <link rel="stylesheet" href="/styles/Dashboard.css">
+    <link rel="stylesheet" href="Dashboard.css">
 
 </head>
 <body>
