--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissful Beauty Salon</title>
-    <link rel="stylesheet" href="Dashboard.css">
+    <link rel="stylesheet" href="index.css">
     
     <!--Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
