--- a/Dashboard.html
+++ b/Dashboard.html
@@ -29,13 +29,21 @@
     <main>
         <div class="slideshow-container">
             <div class="slide fade">
-                <img src="/picture/suliey bar.jpeg" alt="Background Image 1">
+                <img src="C:\Users\theko\Documents\New folder (3)\picture\suliey bar 4" alt="Background Image 1">
             </div>
             <div class="slide fade">
-                <img src="/picture/suliey bar2.jpeg" alt="Background Image 2">
+                <img src=="C:\Users\theko\Documents\New folder (3)\picture\suliey bar 3" alt="Background Image 2">
             </div>
             <div class="slide fade">
-                <img src="/picture/suliey bar4.jpeg" alt="Background Image 3">
+                <img src=="C:\Users\theko\Documents\New folder (3)\picture\suliey bar 2" alt="Background Image 3">
+            </div>
+
+             <div class="slide fade">
+                <img src=="C:\Users\theko\Documents\New folder (3)\picture\suliey bar " alt="Background Image 3">
+            </div>
+
+             <div class="slide fade">
+                <img src=="C:\Users\theko\Documents\New folder (3)\picture\s" alt="Background Image 3">
             </div>
 
             <div class="slide fade">
