--- a/index.html
+++ b/index.html
@@ -21,25 +21,30 @@
                 <li><a href="giftcard.html">Gift card</a></li>
                 <li><a href="specials.html">Promotions</a></li>
                 <li><a href="careers.html">Careers</a></li>
-                <li><a href="index.html">Login</a></li>
+                <li><a href="Dashboard.html">Login</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
         <div class="slideshow-container">
+
             <div class="slide fade">
-                <img src="/picture/suliey bar.jpeg" alt="Background Image 1">
+                <img src= "https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1115485401442499313.jpg">
+            </div>
+            
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar.jpeg" alt="Background Image 1">
             </div>
             <div class="slide fade">
-                <img src="/picture/suliey bar2.jpeg" alt="Background Image 2">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar2.jpeg" alt="Background Image 2">
             </div>
             <div class="slide fade">
-                <img src="/picture/suliey bar4.jpeg" alt="Background Image 3">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar3.jpeg" alt="Background Image 3">
             </div>
 
             <div class="slide fade">
-                <img src="/picture/s.jpeg" alt="Background Image 3">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="Background Image 3">
             </div>
 
         </div>
