--- a/Dashboard.html
+++ b/Dashboard.html
@@ -7,7 +7,7 @@
     <!--Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-    <script type="module" src="/scripts/index.js" defer></script>
+    <script type="module" src="index.js" defer></script>
 </head>
 
 <body>
