--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="picture/Beauty.png" alt="Blissful Salon Logo">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/Beauty.png" alt="Blissful Salon Logo">
         </div>
         
         <nav>
