--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
         <h1>Blissful Beauty Salon</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Sign out</a></li>
+                <li><a href="Dashboard.html">Dashboard</a></li>
                 <li><a href="appointment.html">Book an Appointment</a></li>
                 <li><a href="specials.html">Specials</a></li>
                 <li><a href="contactUs.html">Contact Us</a></li>
