--- a/Dashboard.html
+++ b/Dashboard.html
@@ -20,7 +20,7 @@
             <input type="submit" value="Sign in">
             <a href="registration.html">Sign up?</a>
             <a href="forgotpassword.html">Forgotten password?</a>
-            <a href = "Dashboard.html">Home
+            <a href = "index.html">Home
         </form>
     </div>
 
