--- a/registration.html
+++ b/registration.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salon Member Registration</title>
-    <link rel="stylesheet" href="registration.css">
-    <script type="module" src="registration.js" defer></script>
+    <link rel="stylesheet" href="styles/registration.css">
+    <script type="module" src="/scripts/registration.js" defer></script>
 </head>
 
 <body>
     <div class="registration-container">
         <h2>Create an Account</h2>
         <form id="registration-form" action="index.html" method="post">
-            <input type="text" name="first_name" id="first_name" placeholder=" Fullname" required>
+            <input type="text" name="first_name" id="first_name" placeholder=" Full Name" required>
             <input type="email" name="email" id="email" placeholder="Email" required>
             <input type="tel" name="phone" id="phone" placeholder="Phone Number" required>
             <input type="password" name="password" id="password" placeholder="Password"  required>
