--- a/registration.html
+++ b/registration.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salon Member Registration</title>
-    <link rel="stylesheet" href="styles/registration.css">
-    <script type="module" src="/scripts/registration.js" defer></script>
+    <link rel="stylesheet" href="registration.css">
+    <script type="module" src="registration.js" defer></script>
 </head>
 
 <body>
