--- a/registration.html
+++ b/registration.html
@@ -20,7 +20,7 @@
             <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password"required>
             <input type="submit" id="submit" value="Register">
         </form>
-        <button class="home-button" onclick="location.href='index.html'">Back</button>
+        <button class="home-button" onclick="location.href='Dashboard.html'">Back</button>
         <div class="success-message" id="success-message">Registration successful!</div>
     </div>
 </body>
