--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -23,6 +23,19 @@
    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="image9" > 
  
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/s.jpeg" alt="image19">
+
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kalane3.jpeg" alt="image19">
+
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale2.jpeg" alt="image19">
+
+      <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/mosuli1.jpeg" alt="image19">
+
+      <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar3.jpeg" alt="image19">
+
+
+      <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/uyinene.jpeg" alt="image19">
+
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/uyinene.jpeg" alt="image19">
  
   <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar.jpeg" alt="image20">
 
