--- a/paymentM.html
+++ b/paymentM.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Method - Blissful Beauty Salon</title>
     <link rel="stylesheet" href="paymentM.css">
 </head>
-
 <body>
     <div class="payment-container">
         <h2>Select Payment Method</h2>
         <form id="payment-form">
             <div class="form-group">
-                <label for="card-number">Card Number</label>
-                <input type="text" id="card-number" name="card_number" required>
+                <label for="account-number">Account Number</label>
+                <input type="text" id="account-number" name="account_number" required>
             </div>
             <div class="form-group">
                 <label for="expiry-date">Expiry Date</label>
@@ -26,15 +24,13 @@
             </div>
             <button type="submit" class="submit-button">Pay Now</button>
         </form>
-        <br>
-        <button class="back-button" onclick="window.location.href='services.html'">Back </button>
-        <div class="message" id="success-message">
-            Payment successful! 
-            You will receive a confirmation email shortly.
+        
+        <button class="back-button" onclick="window.location.href='appointments.html'">Back</button>
+        <div class="message" id="success-message" style="display:none;">
+            Payment successful! You will receive a confirmation email shortly.
         </div>
     </div>
 
-<script src="paymentt.js"></script>
+    <script src="payment.js"></script>
 </body>
-
 </html>
