--- a/services.html
+++ b/services.html
@@ -6,37 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Our Salon</title>
     <link rel="stylesheet" href="services.css">
-
 </head>
 
 <body>
     <header>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
         <h1>Blissful Beauty Salon</h1>
         <nav>
             <ul>
                 <li><a href="Dashboard.html">Dashboard</a></li>
-                <li><a href="appointment.html">Book an Appointment</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="specials.html">Specials</a></li>
-                <li><a href="contactUs.html">Contact Us</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="contactUs.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="welcome">
         <h2>First Time Here?</h2>
-        <p><strong>Welcome to Blissful Beauty Salon!</strong>
+        <p><strong>Welcome to Blissful Beauty Salon!</strong></p>
+        <p>We're delighted to have you here. Our team is ready to pamper you with the finest beauty treatments that will leave you feeling refreshed and radiant. Take a moment to explore our luxurious services designed just for you. We can't wait to help you look and feel your absolute best!</p>
+        <a href="servicesoffred.html"><button class="our-services">See Our Services</button></a>
         <br>
-        <br>
-        We're so delighted to have you here. Our team is ready to pamper you with the finest beauty treatments that will leave
-        you feeling refreshed and radiant. Take a moment to explore our range of luxurious services designed just for you. We
-        can't wait to help you look and feel your absolute best! 
-        <br>
-        <br>
+        
+    </section>
 
-         Please click button below to view and soak up our current Services...
-        </p>
-        <a href="servicesoffred.html"><button class="Our-Services">See Our Services</button></a>
+    <section>
+        <h2>Appointment Bookings</h2>
+
+        <p>We would love to be at your Services to meet your demands as a our lovely Customer</p>
+
+        <a href="appointment.html"><button class="our-services">Book an Appointment</button></a>
     </section>
 
     <section id="services">
@@ -50,28 +53,54 @@
         </ul>
     </section>
 
-    <section><h2>Privacy</h2>
+    <section id="gallery">
+        <h2>Our Gallery</h2>
+        <div class="gallery-container">
+            <img src="11.png" alt="Service 1">
+            <img src="hair color.png" alt="Service 2">
+            <img src="5.png" alt="Service 3">
+            <img src="kalane2" alt="Service 4">
+            <img src="kalane3" alt="Service 5">
+            <img src="kalane4" alt="Service 6">
+        </div>
+    </section>
 
-        <p>Your privacy is important to us. We will not share your personal information with third parties without
-            your consent.</p></section>
-            <section><h2>Health and Safety</h2>
+    <section id="testimonials">
+        <h2>What Our Clients Say</h2>
+        <blockquote>
+            "Blissful Beauty Salon transformed my look! The staff is incredibly professional and friendly." - Sarah M.
+        </blockquote>
+        <blockquote>
+            "I had a wonderful experience. Highly recommend their services!" - Theko M.
+        </blockquote>
+    </section>
 
+    <section id="privacy">
+        <h2>Privacy</h2>
+        <p>Your privacy is important to us. We will not share your personal information with third parties without your consent.</p>
+    </section>
+
+    <section id="health-safety">
+        <h2>Health and Safety</h2>
         <p>Please inform us of any health conditions or allergies prior to your treatment.</p>
-        <p>We follow strict hygiene protocols to ensure the safety of our clients and staff.</p></section>
+        <p>We follow strict hygiene protocols to ensure the safety of our clients and staff.</p>
+    </section>
 
-        <section><h2>Changes to Terms</h2>
-
-            <p>Blissful Beauty Salon reserves the right to modify these terms and conditions at any time.</p>
-            <p>Changes will be posted on our website and will take effect immediately.</p></section>
+    <section id="terms">
+        <h2>Changes to Terms</h2>
+        <p>Blissful Beauty Salon reserves the right to modify these terms and conditions at any time. Changes will be posted on our website and will take effect immediately.</p>
+    </section>
 
     <section id="contact">
-
         <h2>Contact Us</h2>
         <p>Phone: +1(800)023-3123</p>
         <p>Email: info@blissprice.com / thekomphow99@gmail.com</p>
-
         <p>Address: 60 Terminus Street, East London</p>
-        </section>
+    </section>
+
+    <footer>
+        <p>© 2024 Blissful Beauty Salon | All Rights Reserved</p>
+    </footer>
 </body>
 
 </html>
