--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="hero">
             <h1><b>Blissful Salon</b></h1>
             <p>Your one-stop destination for relaxation and beauty.</p>
-            <button onclick="location.href='appointment.html'">Book an Appointment</button>
+            <button onclick="location.href='registration.html'">Create a Profile</button>
         </section>
 
         <section class="services">
