--- a/Dashboard.html
+++ b/Dashboard.html
@@ -18,9 +18,8 @@
             <input type="email" id="email" placeholder="Email" required aria-label="Email">
             <input type="password" id="password" placeholder="Password" required aria-label="Password">
             <input type="submit" value="Sign in">
-            <a href="registration.html">Sign up?</a>
             <a href="forgotpassword.html">Forgotten password?</a>
-            <a href = "index.html">Home
+            <a href = "index.html">Dashboard
         </form>
     </div>
 
