--- a/services.html
+++ b/services.html
@@ -56,19 +56,18 @@
     <section id="gallery">
         <h2>Our Gallery</h2>
         <div class="gallery-container">
-            <img src="11.png" alt="Service 1">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale2.jpeg" alt="Service 1">
             <img src="hair color.png" alt="Service 2">
-            <img src="5.png" alt="Service 3">
-            <img src="kalane2" alt="Service 4">
-            <img src="kalane3" alt="Service 5">
-            <img src="kalane4" alt="Service 6">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale3.jpeg" alt="Service 3">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale4.jpeg" alt="Service 4">
+            <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale5.jpeg" alt="Service 6">
         </div>
     </section>
 
     <section id="testimonials">
         <h2>What Our Clients Say</h2>
         <blockquote>
-            "Blissful Beauty Salon transformed my look! The staff is incredibly professional and friendly." - Sarah M.
+            "Blissful Beauty Salon transformed my look! The staff is incredibly professional and friendly." - Dutywa S.
         </blockquote>
         <blockquote>
             "I had a wonderful experience. Highly recommend their services!" - Theko M.
