--- a/paymentM.html
+++ b/paymentM.html
@@ -27,7 +27,7 @@
         
         <button class="back-button" onclick="window.location.href='appointments.html'">Back</button>
         <div class="message" id="success-message" style="display:none;">
-            Payment successful! You will receive a confirmation email shortly.
+           Payment successful! Your appointment has been confirmed. A payment slip will be printed shortly. A confirmation email with your appointment details will also be sent to you.
         </div>
     </div>
 
