--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
         <h1>Blissful Beauty Salon</h1>
         <nav>
             <ul>
-                <li><a href="Dashboard.html">Dashboard</a></li>
+                <li><a href="Dashboard.html">Sign out</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="specials.html">Specials</a></li>
