--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="Dashboard.html">Login</a></li>
-                <li><a href="terms.html">Terms & conditions</a></li>
+                <li><a href="calender.html">Calender</a></li>
                 <li><a href="giftcard.html">Gift card</a></li>
                 <li><a href="specials.html">Promotions</a></li>
                 <li><a href="careers.html">Careers</a></li>
