--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="Dashboard.html">Sign out</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="calendar.html">Calender</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="specials.html">Specials</a></li>
                 <li><a href="contactUs.html">Contact us</a></li>
