--- a/about.html
+++ b/about.html
@@ -18,12 +18,10 @@
         </nav>
     </header>
 
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Welcome to Blissful Beauty Salon, where beauty meets excellence. For over a decade, we have been dedicated to
-            providing top-notch beauty services to our valued clients. Our team of professionals is here to make you
-            look and feel your best.</p>
-    </section>
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/3.png" alt="image14">
+
+<img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2.png" alt="image16">
+    
     <footer>
         <p>&copy; 2024 Blissful Beauty Salon All rights reserved.</p>
     </footer>
