--- a/giftcard.html
+++ b/giftcard.html
@@ -13,7 +13,7 @@
         <h1>Send a Gift Card</h1>
         <nav>
             <ul>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="about.html">About us</a></li>
                 <li><a href="careers.html">Careers</a></li>
                 <li><a href="contactUs.html">Contact</a></li>
             </ul>
