--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
                 
                 <li><a href="giftcard.html">Gift Cards</a></li>
                 <li><a href="careers.html">Careers</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="index.html">Dashboard</a></li>
                 
             </ul>
         </nav>
