--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="slideshow-container">
 
             <div class="slide fade">
-                <img src= "https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1115485401442499313.jpg">
+                <img src= "https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kalane4.jpeg">
             </div>
             
             <div class="slide fade">
