--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="testimonials">
             <h2>What Our Clients Say</h2>
             <blockquote>
-                "The best salon experience I've ever had!" - Mpho R.
+                "The best salon experience I've ever had!" - Uyinene Kalane.
             </blockquote>
         </section>
 
