--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <!-- About the app section -->
         <section class="about-app">
-            <h2>About This App</h2>
+            <h2>About This Web</h2>
             <p>Blissful Salon is a modern web application designed to offer a seamless and user-friendly experience for booking beauty services. Our goal is to help you find relaxation and beauty treatments with ease, ensuring a stress-free experience every time.</p>
         </section>
     </main>
