--- a/specials.html
+++ b/specials.html
@@ -22,7 +22,7 @@
         <br>
         <a href="https://github.com/inno6969/Salon-web/blob/main/MEGAZINE%20BLISS%20.zip"class="download-button" download>Download Our Magazine</a>
         <br>
-        <button class="back-button" onclick="window.location.href='services.html'">Back</button>
+        <button class="back-button" onclick="window.location.href='index.html'">Back</button>
         <p><strong>Check out our latest magazine for exclusive deals and special offers!</strong></p>
 
         </div>
