--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     
     <main>
         <div class="slideshow-container">
+             <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg" alt="Background Image 1">
+            </div>
+
+            <div class="slide fade">
+                <img src"https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="Background Image 1">
+            </div>
             <div class="slide fade">
                 <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kalane4.jpeg" alt="Background Image 1">
             </div>
