--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
              <div class="slide fade">
                 <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/1733640375643.jpg" alt="Background Image 1">
             </div>
-
-            <div class="slide fade">
-                <img src"https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="Background Image 1">
+             <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="Background Image 1">
             </div>
             <div class="slide fade">
-                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kalane4.jpeg" alt="Background Image 1">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/18ff207ccf5c40a983bc2d82e7b89b28.jpg" alt="Background Image 1">
+            </div>
+
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/487ac3ae61484e11b4807d08ff588425.jpg" alt="Background Image 1">
+            </div>
+            <div class="slide fade">
+                <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/e2166d8fe4c54b4d8529e9c71f80ad50.jpg" alt="Background Image 1">
             </div>
             <div class="slide fade">
                 <img src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale2.jpeg" alt="Background Image 2">
