--- a/servicesoffred.html
+++ b/servicesoffred.html
@@ -17,19 +17,21 @@
  
  
    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar4.jpeg" alt="image9" > 
+
+    
  
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/s.jpeg" alt="image19">
 
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kalane3.jpeg" alt="image19">
 
-    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/kanale2.jpeg" alt="image19">
+    <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/2a475d9b99cb40409c58fb73864ed7c5.jpg" alt="image19">
 
       <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/mosuli1.jpeg" alt="image19">
 
       <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/suliey%20bar3.jpeg" alt="image19">
 
 
-      <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/uyinene.jpeg" alt="image19">
+      <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/18ff207ccf5c40a983bc2d82e7b89b28.jpg" alt="image19">
 
     <img class="x" src="https://raw.githubusercontent.com/inno6969/Salon-web/refs/heads/main/uyinene.jpeg" alt="image19">
  
